<resources>
    <string name="app_name">farmApp</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_party_member">Enter your party member</string>
    <string name="select_your_friends_to_party">Select Your Friends to party !</string>
    <string name="save_to_party">Save to Party</string>
    <string name="create_party">Create Party</string>
    <string name="save_name">Save Name</string>
    <string name="type_your_party_name">Type your party name</string>
    <string name="save_drop">Save Drop</string>
</resources>
