<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".PartyActivity">


    <TextView
        android:id="@+id/party_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_your_friends_to_party"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="22sp"
        android:textColor="@color/white"/>

    <AutoCompleteTextView
        android:id="@+id/party_et"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:completionThreshold="1"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        android:hint="@string/enter_your_party_member"
        android:inputType="text"
        android:maxLines="1"
        android:textColorHint="@color/white"
        android:layout_below="@+id/party_tv"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:id="@+id/save_party_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_to_party"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/party_et"/>
    <android.support.v7.widget.CardView
        android:id="@+id/party_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/save_party_btn"
        android:layout_margin="8dp"
        android:elevation="2dp"
        app:cardBackgroundColor="@color/card"
        app:cardCornerRadius="4dp">
        <TextView
            android:id="@+id/party_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:layout_gravity="center_horizontal"
            />
    <LinearLayout
        android:id="@+id/party_member_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">


    </LinearLayout>


    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/create_party_button"
        android:layout_margin="20dp"
        android:enabled="false"
        android:text="@string/create_party"
        android:layout_alignParentEnd="true"
        android:visibility="invisible"
        android:layout_below="@+id/party_cardview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</RelativeLayout>